--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*{
+    margin: 0;
+}
 .Video_sheet{
     scroll-snap-type: y mandatory;
     height: 100vh;
