--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,8 @@
 *{
     margin: 0;
 }
-body{
-  background-color: black;
-}
+/* body{
+} */
 .Video_sheet{
     /* scroll-snap-type: y mandatory; */
     height: 100vh;
