--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,12 @@
     /* scroll-snap-type: y mandatory; */
     height: 100vh;
   }
+  .explore_carousel{
+    scroll-snap-type: x mandatory;
+  }
+  .carousel_item{
+    scroll-snap-align: start;
+  }
   .video_card{
     /* scroll-snap-align: start; */
   }
