Privacy policies updated

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,7 +44,11 @@
   }
   
 .bg_grad{
-  background: linear-gradient(270deg, #D428B6 0%, #BE2ADE 24.59%, #8330C7 50.56%, #5C2ADE 74.51%, #2928D4 100%);
+ /* background: linear-gradient(270deg, #D428B6 0%, #BE2ADE 24.59%, #8330C7 50.56%, #5C2ADE 74.51%, #2928D4 100%); */
+  background-image: url("../../public/images/Background_home.jpg"); /* The image used */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
 }
 
 .no_bar::-webkit-scrollbar {
