minor changes on embed & single video, redirection from root done with query params

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
     font-family: "Open Sans";   
 }
 @media screen and (orientation: landscape) {
-  body {
+  .feed_screen {
     transform: rotate(-90deg);
     transform-origin: left top;
     width: 100vh;
