--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,3 +74,16 @@
 .static_footer{
   height: 256px;
 }
+
+.Circle_loader {
+  height: 0;
+  width: 0;
+  padding: 15px;
+  border: 6px solid #ccc;
+  border-right-color: #888;
+  border-radius: 22px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
+
