--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
     margin: 0;
     font-family: "Open Sans";   
 }
-@media screen and (orientation: landscape) {
+/* @media screen and (orientation: landscape) {
   .feed_screen {
     transform: rotate(-90deg);
     transform-origin: left top;
@@ -16,7 +16,7 @@
     left: 0;
     height: 100vw;
   }
-}
+} */
 /* body{
 } */
 .Video_sheet{
