--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,9 +71,9 @@
 .header_landing{
     height: 112px;
 }
-.static_footer{
+/* .static_footer{
   height: 256px;
-}
+} */
 
 .Circle_loader {
   padding: 15px;
