--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -142,3 +142,23 @@ img{
 		    padding: 0 0 16px 16px;
 		}
 	}
+
+
+
+  /* DESKTOP */
+
+  .video_blur{
+    position: absolute;
+    width: 10%;
+    height: 10%;
+    filter: blur(2px);
+    left: 50%;
+    top: 50%;
+    transform: scale(11);
+    opacity: 0.3;
+  }
+  .video_blur img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
