--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,6 +116,13 @@ img{
     height: 100%;
     width: 100%;
   }
+  .vdo_player_desk{
+    box-sizing: border-box;
+    object-fit: contain!important;
+    height: 100%;
+    width: 100%;
+    object-position: 0 0;
+  }
   input:focus-visible{
     outline: none;
   }
@@ -138,7 +145,7 @@ img{
 }
  
 .thin_bar::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.171);
+  box-shadow: inset 0 0 6px rgba(160, 101, 101, 0.171);
 }
  
 .thin_bar::-webkit-scrollbar-thumb {
@@ -354,5 +361,5 @@ span.swiper-pagination-bullet {
 
 
 .desk-feed{
-  height: 480px;
+  height: 75vh;
 }
