--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,7 +122,7 @@ img{
     height: 100%;
     width: 100%;
     object-position: 0 0;
-    max-width: 300px;
+    max-width: 300;
   }
   input:focus-visible{
     outline: none;
