--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,6 +174,10 @@ img{
 .head-shadow{
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
 }
+.desk-feed:hover .opacity-0{
+  opacity: 100%!important;
+  transition: opacity 0.3s ease 0s;
+}
 
 @media (orientation: portrait) {
   .landscape_screen {
