--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -104,6 +104,12 @@ img{
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
   }
+  .line-clamp-3{
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+  }
  .h-80{
    height: 80%;
  }
