--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -831,17 +831,17 @@ title:first-letter {
 }
 /* shimmer */
 .shimmer {
-  background: #f6f7f8;
-  background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
-  background-repeat: no-repeat;
-  background-size: 800px 504px; 
-  display: inline-block;
-  position: relative; 
-  animation-duration: 1s;
-  animation-fill-mode: forwards; 
-  animation-iteration-count: infinite;
-  animation-name: placeholderShimmer;
-  animation-timing-function: linear;
+    background: #888;
+    background-image: linear-gradient(to right, #888 0%, #d0d0d0 20%, #888 40%, #888 100%);
+    background-repeat: no-repeat;
+    background-size: 800px 504px;
+    display: inline-block;
+    position: relative;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeholderShimmer;
+    animation-timing-function: linear;
   }
 
 
