--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -875,12 +875,38 @@ title:first-letter {
   
   /* STUNNER */
   .bg_1{
-    background-color: #f9faf6;
+    background-color: #f9fbf6;
   }
   .bg_pastel_blue{
-    background-color: #d4f0f5;
+    background-color: #f4def2;
   }
+  .bg-host{
+    background-color: #f9fbf6;
+}
   .max_800{
-    width: 800px;
     max-width: 800px;
+  }
+  .br_40{
+    border-radius: 20px;
+  }  
+  
+  .box_shadow_1{
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  }
+  .purple_font{
+    color: #6e057a;
+  }
+  .h-fit{
+    height: fit-content;
+  }
+  @media only screen and (min-width: 768px) {
+    .max_800{
+      width: 800px;
+    }
+    .br_40{
+      border-radius: 40px 0px 0px 40px;
+    }  
+    .bg-host{
+        background-color: #f4def2;
+    }
   }
