--- a/src/storyblokComponents/card.module.css
+++ b/src/storyblokComponents/card.module.css
@@ -11,7 +11,7 @@
 
 .card_desc{
     padding: 50px;
-    @apply w-3/5;
+    width: 70%;
 }
 
 
@@ -60,7 +60,11 @@
 }
 
 .imageContainer{
-    @apply w-2/5;
+    width: 30%;
+}
+
+.heading{
+    @apply font-bold mb-3 text-3xl;
 }
 
 @media screen and (max-width: 990px) {
