--- a/src/storyblokComponents/mainPage.module.css
+++ b/src/storyblokComponents/mainPage.module.css
@@ -35,6 +35,14 @@
     margin-top: 42px;
 }
 
+.iconWrapper{
+    display: block;
+}
+
+.headingWrapper{
+    @apply w-full flex justify-between;
+}
+
 @media screen and (max-width:990px) {
     .heading{
         font-weight: 700;
@@ -53,5 +61,11 @@
     }
     .tabWrapper{
         @apply w-full block sticky top-16 z-10;
+    }
+    .iconWrapper{
+        display: none;
+    }
+    .headingWrapper{
+        @apply justify-center;
     }
 }
