--- a/src/storyblokComponents/theEdit/post.module.css
+++ b/src/storyblokComponents/theEdit/post.module.css
@@ -1,6 +1,8 @@
 .parentContainer {
   max-width: 740px;
   align-self: center;
+  display: grid;
+  gap: 24px;
 }
 
 @media screen and (max-width: 500px) {
