--- a/src/storyblokComponents/theEdit/carousel.module.css
+++ b/src/storyblokComponents/theEdit/carousel.module.css
@@ -38,7 +38,7 @@
 
 @media screen and (max-width: 600px) {
   .parentContainer {
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto;
     grid-template-columns: 1fr 1fr;
   }
 }
