--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1070,3 +1070,72 @@ title:first-letter {
   .carousel .swiper-container {
    position: unset!important;
   }
+
+
+  /* switch css */
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 30px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider_new {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    height: 25px;
+  }
+  
+  .slider_new:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 1px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider_new {
+    background-color: #0be09b;
+  }
+  
+  input:focus + .slider_new {
+    box-shadow: 0 0 1px #0be09b;
+  }
+  
+  input:checked + .slider_new:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider_new.round {
+    border-radius: 34px;
+  }
+  
+  .slider_new.round:before {
+    border-radius: 50%;
+  }
+
+  /* styled checkbox*/
+#uploadButton:hover svg{
+  fill: #f4def2
+}
