--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1080,3 +1080,9 @@ color: #fd8952;
  .bg_orange{
 background-color:rgb(255 237 223);
  }
+
+@media only screen and (max-width: 767px) {
+  .videoFooter{
+    width: 50%;
+  }
+}
