--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1199,3 +1199,8 @@ background-color:rgb(255 237 223);
 .explore_carousel > .swiper-container > .swiper-pagination {
   z-index: 1!important;
 }
+
+.requiredField::after{
+  content: "*";
+  color: red;
+}
