Upload page changes (#16)
* upload page

* adding checkes

* upload checks

* upload feature

* added code for uplaod feature

* added code for uplaod feature

* added svg Icons

* added svg Icons

* added svg Icons

* button_change

* upload changes

* icon changes

* Pull#2

* static changes

* added checks on video upload

* redeploying

* added get own profile api

* Added loader on button

* upload changes

* upload page changes

* upload page changes

* upload changes

* upload page changes

* change#2

* view_profile

* adding checks

* adding condition for selected user

* adding condition for selected user

* upload page issues

* adding changes for upload

* upload page changes

* adding check for user type

* upload page changes

* adding check

* fixing bugs

* upload changes

* upload changes

* PR review fixes

* upload page fixes

* added console

* renaming labels

* rebasing from upload-page (#4)

* refactored feed source, easy to append values in header for feed API, removed x-lang from headers if no lang present

* .

* added previous page logic

* .

* added previous page logic

* added recko events

* source, page name & reco events added

* added protip stamp

* .

* >

* added rule

* added rules-2

* added disable comment

* added disable comment-2

* removed taliwind from css file

* added jit mode in tailwind config

* .

* theedit changes to blog

* .

* changed card height to min-content

* linked changed to blog and theedit removed

* added appBanner

* corrected video schema name

* changed version

* renaming labels

Co-authored-by: Rishi Arya <rishi.arya@zee.com>
Co-authored-by: Suvansh Agrawal <suvansh.agrawal@zee.com>
Co-authored-by: Suvansh Agrawal <suvansh.agrawal@ZL-BLR-MAC097.local>
Co-authored-by: suvanshAgrawal <117360057+suvanshAgrawal@users.noreply.github.com>

* adding react/no-unknown-p

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -913,6 +913,13 @@ title:first-letter {
   .box_shadow_1{
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
   }
+
+  .box_shadow_2{
+    box-shadow: rgb(0 0 0 / 6%) 0px 2px 8px;
+    background-color: rgb(255, 255, 255);
+  }
+  
+
   .purple_light{
     color: #9c21aa;
   }
@@ -1093,6 +1100,87 @@ title:first-letter {
   .carousel .swiper-container {
    position: unset!important;
   }
+
+
+  /* switch css */
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 30px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider_new {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    height: 25px;
+  }
+  
+  .slider_new:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 1px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider_new {
+    background-color: #0be09b;
+  }
+  
+  input:focus + .slider_new {
+    box-shadow: 0 0 1px #0be09b;
+  }
+  
+  input:checked + .slider_new:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider_new.round {
+    border-radius: 34px;
+  }
+  
+  .slider_new.round:before {
+    border-radius: 50%;
+  }
+
+  /* styled checkbox*/
+/* #uploadButton:hover svg{
+  fill: #f4def2
+} */
+/* language iphone 6 */
+@media only screen 
+    and (max-device-width : 376px) {
+      .lang-sm{
+        max-width: 15vh!important;
+        min-height: 8vh;
+        margin: 10px 4%;
+      }
+      .done_btn{
+        width: 55vh;
+      }
+    }
 /* Language selection */
     @media only screen 
     and (min-device-width : 376px) {
@@ -1145,6 +1233,10 @@ background-color:rgb(255 237 223);
   z-index: 1!important;
 }
 
+.requiredField::after{
+  content: "*";
+  color: red;
+}
 /* iphone_small sidebar icons hide */
 @media only screen and (max-height: 580px) {
   .iphone_small{
@@ -1152,6 +1244,11 @@ background-color:rgb(255 237 223);
   }
 }
 
+.videoResponsiveWidth {
+  max-width: 263px;
+  height: 32.3vw;
+  max-height: 466px;
+}
 /* protip_font */
 
 .protip_font{
