drawer playlist bg color change

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1244,3 +1244,7 @@ input:checked + .slider_new:before {
   height: 32.3vw;
   max-height: 466px;
 }
+
+.playlist_bg {
+  background-color: #f2f2f2;
+}
