--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1249,3 +1249,7 @@ input:checked + .slider_new:before {
   font-size: 8px;
   line-height: 12px;
 }
+/* install app */
+.install_app_bg{
+  background-color:#000000c2;
+}
