--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1461,7 +1461,7 @@ input:checked + .slider_new:before {
 }
 
 .stunner_purple{
-  background-color: #33238e;
+  background-color: #312667;
 }
 .reflect{
 	-webkit-transform: scaleX(-1);
