--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -862,8 +862,8 @@ title:first-letter {
 }
 /* shimmer */
 .shimmer {
-    background: #888;
-    background-image: linear-gradient(to right, #888 0%, #d0d0d0 20%, #888 40%, #888 100%);
+    background: #c3c3c3;
+    background-image: linear-gradient(90deg,#c3c3c3,#e9e9e9 30%,#c3c3c3 40%,#c3c3c3);
     background-repeat: no-repeat;
     background-size: 800px 504px;
     display: inline-block;
