--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -862,13 +862,13 @@ title:first-letter {
 }
 /* shimmer */
 .shimmer {
-    background: #c3c3c3;
-    background-image: linear-gradient(90deg,#c3c3c3,#e9e9e9 30%,#c3c3c3 40%,#c3c3c3);
+    background: #b6b6b6;
+    background-image: linear-gradient(90deg,#b6b6b6,#d8d8d8bd 40%,#b6b6b6 80%,#b6b6b6);
     background-repeat: no-repeat;
     background-size: 800px 504px;
     display: inline-block;
     position: relative;
-    animation-duration: 1.5s;
+    animation-duration: 2s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     animation-name: placeholderShimmer;
